custom-resource-consumers/takeout/apps/home-automation/n8n/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: n8n
  namespace: home-automation
  annotations:
    reloader.stakater.com/auto: "true"
  labels:
    app: n8n
spec:
  replicas: 1 # active longhorn-database
  selector:
    matchLabels:
      app: n8n
  serviceName: n8n
  template:
    metadata:
      annotations: {}
      labels:
        app: n8n
    spec:
      containers:
        - name: n8n
          image: n8nio/n8n:0.214.0
          imagePullPolicy: Always
          # command: ["tail","-f","/dev/null"]
          ports:
            - containerPort: 5678
              name: http
              protocol: TCP
          volumeMounts:
            - name: n8n-data
              mountPath: /home/node/.n8n
          resources:
            requests:
              cpu: 10m
            limits:
              memory: 512Mi
        # - name: sqlite
        #   image: linuxserver/sqlitebrowser:3.12.2
        #   imagePullPolicy: Always
        #   # command: ["tail","-f","/dev/null"]
        #   ports:
        #     - containerPort: 3000
        #       name: http
        #       protocol: TCP
        #   volumeMounts:
        #     - name: n8n-data
        #       mountPath: /home/node/.n8n
        #   resources:
        #     requests:
        #       cpu: 10m
        #     limits:
        #       memory: 512Mi
      volumes:
        - name: n8n-data
          persistentVolumeClaim:
            claimName: n8n-data-longhorn-database
      serviceAccount: n8n
      imagePullSecrets:
        - name: docker-hub
      # nodeSelector:
      #   kubernetes.io/hostname: trainman
